--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@
 /.vs/ProjectEvaluation/advent of code 2022.projects.v5.2
 /.vs/ProjectEvaluation/advent of code 2022.metadata.v5.2
 /.vs/Advent of Code 2022/v17/.futdcache.v2
+/Advent of Code 2022/obj/Debug/net7.0
+/Advent of Code 2022/obj/Release/net7.0
+/Advent of Code 2022/obj/project.packagespec.json
+/Advent of Code 2022/bin/Debug/net7.0
+/Advent of Code 2022/bin/Release/net7.0
