Day 17. Atleast first is done.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@
 /Advent of Code 2022/obj/project.packagespec.json
 /Advent of Code 2022/bin/Debug/net7.0
 /Advent of Code 2022/bin/Release/net7.0
+/.vs/Advent of Code 2022
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/Advent of Code 2022/obj/Release/net6.0/Advent of Code 2022.assets.cache
+/Advent of Code 2022/obj/Release/net6.0/Advent of Code 2022.GeneratedMSBuildEditorConfig.editorconfig
